--- a/LP_Financial_Application.ipynb
+++ b/LP_Financial_Application.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsqtFnCVp8AgXgU0pm+bL6",
+      "authorship_tag": "ABX9TyOg9xdhEV9xdnc727PrJ9bZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kankeinai/Portfolio-Selection-Problem/blob/main/LP_Financial_Application.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kankeinai/LP-Portfolio-Selection-Problem/blob/main/LP_Financial_Application.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -33,6 +33,15 @@
       ],
       "metadata": {
         "id": "qO6sGVaswDrJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Main contributor: Begantsova Milana"
+      ],
+      "metadata": {
+        "id": "ka1oPWLyAdb7"
       }
     },
     {
