--- a/LP_Financial_Application.ipynb
+++ b/LP_Financial_Application.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOg9xdhEV9xdnc727PrJ9bZ",
+      "authorship_tag": "ABX9TyML5k4aBWz/OP60acuK1zU5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "745c3f37-0a92-41b5-d4eb-94c20e920d1c"
+        "outputId": "b45f946b-4f0b-4bb3-dccc-70f2632b8d99"
       },
       "outputs": [
         {
@@ -130,7 +130,7 @@
           "height": 793
         },
         "id": "Z2QC32dbMn9a",
-        "outputId": "d8d92437-a481-4ad8-9b76-a138cfacf929"
+        "outputId": "427af5b7-c82e-43df-e2a5-c5c26896bdb6"
       },
       "execution_count": 2,
       "outputs": [
@@ -192,7 +192,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2f88ae94-25aa-4c06-9de8-3f67a99c0c41\">\n",
+              "  <div id=\"df-88d8dd54-97ac-4765-90ae-74936e3a2df2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -540,7 +540,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2f88ae94-25aa-4c06-9de8-3f67a99c0c41')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-88d8dd54-97ac-4765-90ae-74936e3a2df2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -591,12 +591,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2f88ae94-25aa-4c06-9de8-3f67a99c0c41 button.colab-df-convert');\n",
+              "          document.querySelector('#df-88d8dd54-97ac-4765-90ae-74936e3a2df2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2f88ae94-25aa-4c06-9de8-3f67a99c0c41');\n",
+              "          const element = document.querySelector('#df-88d8dd54-97ac-4765-90ae-74936e3a2df2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -698,9 +698,9 @@
           "height": 695
         },
         "id": "p2M8QCHUaInO",
-        "outputId": "5ee75a25-fd64-425f-a18a-ea1fafe5b017"
+        "outputId": "bcb0eb86-58dc-43e4-d982-8fe1b69657c6"
       },
-      "execution_count": 37,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -899,7 +899,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O-WfVhI0Bgdn",
-        "outputId": "73c8aab0-82a9-46a2-d843-a2adf7a8f0bf"
+        "outputId": "22372522-e974-4bc4-bdc9-c1063017da62"
       },
       "execution_count": 7,
       "outputs": [
@@ -958,7 +958,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "97ekQpxB2SDj",
-        "outputId": "addbcd14-c030-492d-f731-1117d944db6f"
+        "outputId": "de69eaf5-f6cf-4258-f25d-82e28e2cb5ca"
       },
       "execution_count": 8,
       "outputs": [
@@ -995,22 +995,48 @@
     {
       "cell_type": "code",
       "source": [
+        "def solve_simplex(mu):\n",
+        "    result = []\n",
+        "\n",
+        "    for val in mu:\n",
+        "\n",
+        "        z, b, A = create_lp(val)\n",
+        "        res = linprog(-z, A_ub=A, b_ub=b)\n",
+        "        result.append(res.x[:n])\n",
+        "\n",
+        "    return np.array(result).T\n",
+        "\n",
         "mu = np.linspace(0, 10, 1000)\n",
-        "result = []\n",
-        "\n",
-        "for val in mu:\n",
-        "\n",
-        "    z, b, A = create_lp(val)\n",
-        "    res = linprog(-z, A_ub=A, b_ub=b)\n",
-        "    result.append(res.x[:n])\n",
-        "\n",
-        "values = np.array(result).T"
+        "values = solve_simplex(mu)"
       ],
       "metadata": {
         "id": "LMO_B0KXIFrm"
       },
       "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%timeit solve_simplex(mu)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "maoMnPuaBswk",
+        "outputId": "315657bb-cd0a-40c0-ece8-a2f28a611047"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6.22 s ± 764 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1034,14 +1060,12 @@
       "metadata": {
         "id": "Q2l6QgNhZAaC"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "values = np.array(result).T\n",
-        "\n",
         "generate_frontier(mu, values)"
       ],
       "metadata": {
@@ -1050,9 +1074,9 @@
           "height": 862
         },
         "id": "U5e402y4ZUoD",
-        "outputId": "2fcfb0f0-6332-46d6-b4ea-bc2fb00e8271"
+        "outputId": "dc1463df-99b9-4631-fc05-1835c852438a"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1127,9 +1151,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "eb845baa-9e1d-43bb-c910-500efffbcf4d"
+        "outputId": "e32114f9-8d3b-4e73-a491-f089526edea5"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1158,9 +1182,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "92164a44-be5e-4975-8014-9aea816a697d"
+        "outputId": "f0f78902-0812-44ea-ed75-c4f7046f9787"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1235,7 +1259,7 @@
       "metadata": {
         "id": "W-OLTCgig6GG"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1259,7 +1283,7 @@
       "metadata": {
         "id": "p3Af7TNtivs4"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1337,7 +1361,7 @@
       "metadata": {
         "id": "cxgMlnRqpDsF"
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1351,7 +1375,7 @@
       "metadata": {
         "id": "yeBg-SsfuCU4"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1374,9 +1398,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b1a8bb18-1694-44a5-df53-7afce8fed0a1"
+        "outputId": "5df76531-98b9-4a49-d638-38c6bc32c35d"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1405,7 +1429,7 @@
       "metadata": {
         "id": "mqjJ_DaSxlgY"
       },
-      "execution_count": 19,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1444,7 +1468,7 @@
       "metadata": {
         "id": "QWxIao9HxCbF"
       },
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1477,7 +1501,7 @@
       "metadata": {
         "id": "3n_v2fPn58CJ"
       },
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1501,7 +1525,7 @@
       "metadata": {
         "id": "XbsvBSTi6653"
       },
-      "execution_count": 22,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1513,7 +1537,7 @@
       "metadata": {
         "id": "J_9Nzb8k8S0N"
       },
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1535,9 +1559,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "71d8b939-585c-481c-8278-1dcf52d4e89e"
+        "outputId": "2a731666-e9cb-4b89-e8be-57e28adc7e79"
       },
-      "execution_count": 24,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1547,7 +1571,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 25
         }
       ]
     },
@@ -1593,7 +1617,7 @@
       "metadata": {
         "id": "lW6NolYmflqn"
       },
-      "execution_count": 25,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1647,7 +1671,7 @@
       "metadata": {
         "id": "HPIGQtmtL_oL"
       },
-      "execution_count": 26,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1681,7 +1705,7 @@
       "metadata": {
         "id": "jEffzZXCODic"
       },
-      "execution_count": 27,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1692,7 +1716,7 @@
       "metadata": {
         "id": "d-M3y-TUO5PQ"
       },
-      "execution_count": 28,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1718,7 +1742,7 @@
       "metadata": {
         "id": "bTEpdlydVOYB"
       },
-      "execution_count": 29,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1768,7 +1792,7 @@
       "metadata": {
         "id": "un2u5QOOcKXk"
       },
-      "execution_count": 30,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1796,20 +1820,19 @@
       "metadata": {
         "id": "4-olUTt2Zpvo"
       },
-      "execution_count": 31,
+      "execution_count": 32,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def solve_portfolio_selection():\n",
+        "def solve_portfolio_selection(logging):\n",
         "    result = {'mu':[], 'x':[]}\n",
         "\n",
         "    A, c, b, z_bar, x_bar, B, N = generate_parametric(T, n, j_star,D_matrix)\n",
         "\n",
         "    z_star = np.zeros(len(B)+len(N)).reshape(-1,1)\n",
         "    np.put(z_star, N, z_star_calc(A, B, N, c))\n",
-        "\n",
         "    x_star = np.zeros(len(B)+len(N)).reshape(-1,1)\n",
         "    np.put(x_star, B, x_star_calc(A, B, b))\n",
         "\n",
@@ -1817,7 +1840,8 @@
         "\n",
         "    while mu>0:\n",
         "\n",
-        "        print(f\"Got μ={mu} with {way}\")\n",
+        "        if logging:\n",
+        "            print(f\"Got μ={mu} with {way}\")\n",
         "\n",
         "        x = np.zeros(n)\n",
         "        np.put(x, B[B<n], x_star[B[B<n]])\n",
@@ -1866,72 +1890,40 @@
       "metadata": {
         "id": "z9LSaXesc3YI"
       },
-      "execution_count": 32,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "result = solve_portfolio_selection()"
+        "result = solve_portfolio_selection(False)"
+      ],
+      "metadata": {
+        "id": "V8QD-gAUn2zn"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%timeit solve_portfolio_selection(False)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "V8QD-gAUn2zn",
-        "outputId": "d8bb865d-eaba-4945-e84c-a5f8f164d70b"
+        "id": "YSJgi0xTCQjq",
+        "outputId": "ba173205-75da-46ef-bca6-088acae0e6a6"
       },
-      "execution_count": 33,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Got μ=[8.22814208] with j\n",
-            "Got μ=[7.14480874] with j\n",
-            "Got μ=[6.06420765] with j\n",
-            "Got μ=[5.80054645] with j\n",
-            "Got μ=[5.56497148] with j\n",
-            "Got μ=[5.36880545] with j\n",
-            "Got μ=[4.4969883] with j\n",
-            "Got μ=[4.27511672] with j\n",
-            "Got μ=[3.40551329] with j\n",
-            "Got μ=[3.12384171] with j\n",
-            "Got μ=[3.08002269] with j\n",
-            "Got μ=[2.96786119] with j\n",
-            "Got μ=[2.91272083] with j\n",
-            "Got μ=[2.48154552] with j\n",
-            "Got μ=[2.19448264] with j\n",
-            "Got μ=[1.88425094] with j\n",
-            "Got μ=[1.33811196] with j\n",
-            "Got μ=[1.31718793] with j\n",
-            "Got μ=[1.26691177] with j\n",
-            "Got μ=[1.1433239] with j\n",
-            "Got μ=[1.06154157] with j\n",
-            "Got μ=[0.97873007] with j\n",
-            "Got μ=[0.91825965] with j\n",
-            "Got μ=[0.90859286] with j\n",
-            "Got μ=[0.87015168] with j\n",
-            "Got μ=[0.83724481] with j\n",
-            "Got μ=[0.8244409] with j\n",
-            "Got μ=[0.81084426] with j\n",
-            "Got μ=[0.80214914] with j\n",
-            "Got μ=[0.73841891] with j\n",
-            "Got μ=[0.71185088] with j\n",
-            "Got μ=[0.71175258] with j\n",
-            "Got μ=[0.71136415] with j\n",
-            "Got μ=[0.6732531] with j\n",
-            "Got μ=[0.54468205] with j\n",
-            "Got μ=[0.48477408] with j\n",
-            "Got μ=[0.46372148] with j\n",
-            "Got μ=[0.45348669] with j\n",
-            "Got μ=[0.435877] with j\n",
-            "Got μ=[0.21536031] with j\n",
-            "Got μ=[0.15882565] with j\n",
-            "Got μ=[0.03854284] with j\n",
-            "Got μ=[6.53104311e-06] with i\n",
-            "Got μ=[2.43945489e-06] with i\n",
-            "Got μ=[5.36541445e-07] with i\n"
+            "The slowest run took 5.58 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+            "116 ms ± 96 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
           ]
         }
       ]
@@ -1965,9 +1957,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J9anF89ctG6Q",
-        "outputId": "06eac737-25b5-40bd-a3de-f4b515b0c1c0"
+        "outputId": "7cb03fe7-95bc-4f7f-eba1-4ebcf860bab7"
       },
-      "execution_count": 38,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
