--- a/LP_Financial_Application.ipynb
+++ b/LP_Financial_Application.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyML5k4aBWz/OP60acuK1zU5",
+      "authorship_tag": "ABX9TyNOE06IUvQj/24wDJ/s1y02",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b45f946b-4f0b-4bb3-dccc-70f2632b8d99"
+        "outputId": "25028eea-b379-4389-c03f-2baf5da72532"
       },
       "outputs": [
         {
@@ -130,7 +130,7 @@
           "height": 793
         },
         "id": "Z2QC32dbMn9a",
-        "outputId": "427af5b7-c82e-43df-e2a5-c5c26896bdb6"
+        "outputId": "9ac7f157-436d-463a-8016-2b05f701a0bf"
       },
       "execution_count": 2,
       "outputs": [
@@ -192,7 +192,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-88d8dd54-97ac-4765-90ae-74936e3a2df2\">\n",
+              "  <div id=\"df-8b51d6a0-2091-48f6-8606-5c02ce8e1738\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -540,7 +540,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-88d8dd54-97ac-4765-90ae-74936e3a2df2')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8b51d6a0-2091-48f6-8606-5c02ce8e1738')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -591,12 +591,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-88d8dd54-97ac-4765-90ae-74936e3a2df2 button.colab-df-convert');\n",
+              "          document.querySelector('#df-8b51d6a0-2091-48f6-8606-5c02ce8e1738 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-88d8dd54-97ac-4765-90ae-74936e3a2df2');\n",
+              "          const element = document.querySelector('#df-8b51d6a0-2091-48f6-8606-5c02ce8e1738');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -698,7 +698,7 @@
           "height": 695
         },
         "id": "p2M8QCHUaInO",
-        "outputId": "bcb0eb86-58dc-43e4-d982-8fe1b69657c6"
+        "outputId": "034ceda1-8a6b-411f-ce41-952e52cefac9"
       },
       "execution_count": 4,
       "outputs": [
@@ -899,7 +899,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O-WfVhI0Bgdn",
-        "outputId": "22372522-e974-4bc4-bdc9-c1063017da62"
+        "outputId": "b15a86b6-6f3e-470c-c8d5-82a09df46741"
       },
       "execution_count": 7,
       "outputs": [
@@ -958,7 +958,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "97ekQpxB2SDj",
-        "outputId": "de69eaf5-f6cf-4258-f25d-82e28e2cb5ca"
+        "outputId": "56628dd6-23a1-4477-a607-bb7ac39fad94"
       },
       "execution_count": 8,
       "outputs": [
@@ -1025,7 +1025,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "maoMnPuaBswk",
-        "outputId": "315657bb-cd0a-40c0-ece8-a2f28a611047"
+        "outputId": "11e6c16e-2a39-45da-f48f-a90358f03241"
       },
       "execution_count": 10,
       "outputs": [
@@ -1033,7 +1033,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6.22 s ± 764 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+            "6.45 s ± 670 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
           ]
         }
       ]
@@ -1074,7 +1074,7 @@
           "height": 862
         },
         "id": "U5e402y4ZUoD",
-        "outputId": "dc1463df-99b9-4631-fc05-1835c852438a"
+        "outputId": "4c463e65-c037-4934-b6c2-0f7a017e34b0"
       },
       "execution_count": 12,
       "outputs": [
@@ -1151,7 +1151,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e32114f9-8d3b-4e73-a491-f089526edea5"
+        "outputId": "dbd0e1fd-0df5-43e1-cb41-6921e663766f"
       },
       "execution_count": 13,
       "outputs": [
@@ -1182,7 +1182,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f0f78902-0812-44ea-ed75-c4f7046f9787"
+        "outputId": "685b22f2-eda4-4cda-eb99-ccedafec229b"
       },
       "execution_count": 14,
       "outputs": [
@@ -1398,7 +1398,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5df76531-98b9-4a49-d638-38c6bc32c35d"
+        "outputId": "7b24509d-8851-4b1e-cec9-3ce61b65f129"
       },
       "execution_count": 19,
       "outputs": [
@@ -1559,7 +1559,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2a731666-e9cb-4b89-e8be-57e28adc7e79"
+        "outputId": "9cd9ad7a-f2e3-454f-bb88-437ce5b986f0"
       },
       "execution_count": 25,
       "outputs": [
@@ -1896,34 +1896,66 @@
     {
       "cell_type": "code",
       "source": [
-        "result = solve_portfolio_selection(False)"
-      ],
-      "metadata": {
-        "id": "V8QD-gAUn2zn"
-      },
-      "execution_count": 34,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%timeit solve_portfolio_selection(False)"
+        "result = solve_portfolio_selection(True)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "YSJgi0xTCQjq",
-        "outputId": "ba173205-75da-46ef-bca6-088acae0e6a6"
+        "id": "V8QD-gAUn2zn",
+        "outputId": "70584947-7bd3-4e75-8781-9d32fcb0e324"
       },
-      "execution_count": 35,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The slowest run took 5.58 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-            "116 ms ± 96 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+            "Got μ=[8.22814208] with j\n",
+            "Got μ=[7.14480874] with j\n",
+            "Got μ=[6.06420765] with j\n",
+            "Got μ=[5.80054645] with j\n",
+            "Got μ=[5.56497148] with j\n",
+            "Got μ=[5.36880545] with j\n",
+            "Got μ=[4.4969883] with j\n",
+            "Got μ=[4.27511672] with j\n",
+            "Got μ=[3.40551329] with j\n",
+            "Got μ=[3.12384171] with j\n",
+            "Got μ=[3.08002269] with j\n",
+            "Got μ=[2.96786119] with j\n",
+            "Got μ=[2.91272083] with j\n",
+            "Got μ=[2.48154552] with j\n",
+            "Got μ=[2.19448264] with j\n",
+            "Got μ=[1.88425094] with j\n",
+            "Got μ=[1.33811196] with j\n",
+            "Got μ=[1.31718793] with j\n",
+            "Got μ=[1.26691177] with j\n",
+            "Got μ=[1.1433239] with j\n",
+            "Got μ=[1.06154157] with j\n",
+            "Got μ=[0.97873007] with j\n",
+            "Got μ=[0.91825965] with j\n",
+            "Got μ=[0.90859286] with j\n",
+            "Got μ=[0.87015168] with j\n",
+            "Got μ=[0.83724481] with j\n",
+            "Got μ=[0.8244409] with j\n",
+            "Got μ=[0.81084426] with j\n",
+            "Got μ=[0.80214914] with j\n",
+            "Got μ=[0.73841891] with j\n",
+            "Got μ=[0.71185088] with j\n",
+            "Got μ=[0.71175258] with j\n",
+            "Got μ=[0.71136415] with j\n",
+            "Got μ=[0.6732531] with j\n",
+            "Got μ=[0.54468205] with j\n",
+            "Got μ=[0.48477408] with j\n",
+            "Got μ=[0.46372148] with j\n",
+            "Got μ=[0.45348669] with j\n",
+            "Got μ=[0.435877] with j\n",
+            "Got μ=[0.21536031] with j\n",
+            "Got μ=[0.15882565] with j\n",
+            "Got μ=[0.03854284] with j\n",
+            "Got μ=[6.53104311e-06] with i\n",
+            "Got μ=[2.43945489e-06] with i\n",
+            "Got μ=[5.36541445e-07] with i\n"
           ]
         }
       ]
@@ -1936,6 +1968,30 @@
       "metadata": {
         "id": "KJruyVbz8o5V"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%timeit solve_portfolio_selection(False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YSJgi0xTCQjq",
+        "outputId": "b9ca4ed9-1686-43e2-f008-d522be4cf8f7"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The slowest run took 8.91 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+            "114 ms ± 133 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1957,7 +2013,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J9anF89ctG6Q",
-        "outputId": "7cb03fe7-95bc-4f7f-eba1-4ebcf860bab7"
+        "outputId": "dad04497-966c-45ef-ca68-9ba9a52a765e"
       },
       "execution_count": 36,
       "outputs": [
@@ -2018,7 +2074,7 @@
       "source": [
         "So, using parametric simplex method, we achieved more accurate results by solving problem $42$ times vs $1000$. \n",
         "\n",
-        "The results are also coincide with our intuition about the problem."
+        "The results also coincide with our intuition about the problem."
       ],
       "metadata": {
         "id": "TMNtikJB9ZB2"
