--- a/LP_Financial_Application.ipynb
+++ b/LP_Financial_Application.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOE06IUvQj/24wDJ/s1y02",
+      "authorship_tag": "ABX9TyNvTbBJ6o5NCyHwLxUMBSiq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -769,6 +769,15 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JILrJl5OFLr6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "\\begin{align}\n",
@@ -787,16 +796,14 @@
       "source": [
         "Now, we can further simplify expression by defining\n",
         "$$y_t = \\left|{\\sum_j{x_j\\left(R_j(t)-r_j\\right)}}\\right|$$\n",
-        "Since, it is equality constraint we can rewrite it as:\n",
-        "$$y_t \\leq {\\sum_j{x_j\\left(R_j(t)-r_j\\right)}}$$\n",
-        "$$y_t \\geq {\\sum_j{x_j\\left(R_j(t)-r_j\\right)}}$$\n",
+        "\n",
         "\n",
         "So final Linear Programming problem can be expressed as:\n",
         "\n",
         "\\begin{align}\n",
         "   \\text{maximize: } &\\mu\\sum_j{x_jr_j} - \\frac{1}{T}\\sum_{t=1}^T y_t \\\\\n",
         "   \\text{subject to: } &{\\sum_j{x_j\\left(R_j(t)-r_j\\right)}} \\leq y_t \\\\\n",
-        "   &-{\\sum_j{x_j\\left(R_j(t)-r_j\\right)}} \\leq y_t \\\\\n",
+        "    -&{\\sum_j{x_j\\left(R_j(t)-r_j\\right)}} \\leq y_t \\\\\n",
         "    &\\sum_j{x_j} = 1, \\quad x_j \\geq 0 \\quad  j=1,2,\\dots n  \\\\\n",
         "    &y_t \\geq 0 \\quad  t=1,2,\\dots T\n",
         "\\end{align}"
