--- a/LP_Financial_Application.ipynb
+++ b/LP_Financial_Application.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLNtpLKdZ7dW2RS7g8H3Ld",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNg/kEeSh4pRNmCPBqykPQQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -762,7 +763,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Portfolio Selection given known historical data"
+        "##Portfolio Selection given known historical data"
       ],
       "metadata": {
         "id": "8iuaG67yOwFo"
@@ -827,7 +828,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Naive: Solution via Simplex Method (by varying parameter)"
+        "##Naive: Solution via Simplex Method (by varying parameter)"
       ],
       "metadata": {
         "id": "pMl9TDn69kXO"
@@ -1014,6 +1015,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Measurement of performance"
+      ],
+      "metadata": {
+        "id": "GylDimAdHET0"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%timeit solve_simplex(mu)"
@@ -1035,6 +1045,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Plot of Efficient frontier"
+      ],
+      "metadata": {
+        "id": "lKXr597KHHFB"
+      }
     },
     {
       "cell_type": "code",
@@ -1102,7 +1121,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Solution via Parametric Simplex Method"
+        "##Solution via Parametric Simplex Method"
       ],
       "metadata": {
         "id": "9cN4F9gzWe47"
@@ -1287,7 +1306,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Generate Matrix A"
+        "###Generate Matrix A"
       ],
       "metadata": {
         "id": "PHUqXc5dwQr_"
@@ -1433,7 +1452,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Generate vector b"
+        "###Generate vector b"
       ],
       "metadata": {
         "id": "yFl3ycDZwYBC"
@@ -1576,6 +1595,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Define pertubations"
+      ],
+      "metadata": {
+        "id": "3mZNTuGHGniE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Let's start from some notation:\n",
         "$$\\zeta = \\zeta^* - (z^*_N+\\mu \\bar z_N)^Tx_N$$\n",
         "$$x_B = (x_B^*+\\mu\\bar x_B) - B^{-1}Nx_N$$\n",
@@ -1648,6 +1676,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Generate vector c"
+      ],
+      "metadata": {
+        "id": "K-ieNSqnGq-P"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def generate_c():\n",
@@ -1679,6 +1716,15 @@
       ],
       "metadata": {
         "id": "JwC4dvGy4znP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Function generating parametric problem"
+      ],
+      "metadata": {
+        "id": "9AGfA7QZGuWe"
       }
     },
     {
@@ -1742,6 +1788,15 @@
       },
       "execution_count": 30,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Algorithms of Parametric Simplex Method"
+      ],
+      "metadata": {
+        "id": "qX-sxcZqG0ET"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1968,6 +2023,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Measurement of performance"
+      ],
+      "metadata": {
+        "id": "TJT8pK_gG8vn"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%timeit solve_portfolio_selection(False)"
@@ -1990,6 +2054,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Results"
+      ],
+      "metadata": {
+        "id": "q-o0XBetHA1k"
+      }
     },
     {
       "cell_type": "code",
